--- a/paper/egbib.bib
+++ b/paper/egbib.bib
@@ -37,6 +37,70 @@
   url       = {https://s3-us-west-2.amazonaws.com/openai-assets/research-covers/language-unsupervised/language_understanding_paper.pdf}
 }
 
+@article{gptapps1,
+  author    = {Ke{-}Li Chiu and
+               Rohan Alexander},
+  title     = {Detecting Hate Speech with {GPT-3}},
+  journal   = {CoRR},
+  volume    = {abs/2103.12407},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2103.12407},
+  eprinttype = {arXiv},
+  eprint    = {2103.12407}
+}
+
+@article{gptapps2,
+  author    = {Alexandr Nikolich and
+               Arina Puchkova},
+  title     = {Fine-tuning {GPT-3} for Russian Text Summarization},
+  journal   = {CoRR},
+  volume    = {abs/2108.03502},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2108.03502},
+  eprinttype = {arXiv},
+  eprint    = {2108.03502}
+}
+
+@article{gptapps3,
+  author    = {Xiao Liu and
+               Yanan Zheng and
+               Zhengxiao Du and
+               Ming Ding and
+               Yujie Qian and
+               Zhilin Yang and
+               Jie Tang},
+  title     = {{GPT} Understands, Too},
+  journal   = {CoRR},
+  volume    = {abs/2103.10385},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2103.10385},
+  eprinttype = {arXiv},
+  eprint    = {2103.10385}
+}
+
+@article{gptapps4,
+  author    = {Weihao Yu and
+               Zihang Jiang and
+               Fei Chen and
+               Qibin Hou and
+               Jiashi Feng},
+  title     = {{LV-BERT:} Exploiting Layer Variety for {BERT}},
+  journal   = {CoRR},
+  volume    = {abs/2106.11740},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2106.11740},
+  eprinttype = {arXiv},
+  eprint    = {2106.11740}
+}
+
+@misc{gptapps5,
+      title={Want To Reduce Labeling Cost? GPT-3 Can Help},
+      author={Shuohang Wang and Yang Liu and Yichong Xu and Chenguang Zhu and Michael Zeng},
+      year={2021},
+      eprint={2108.13487},
+      archivePrefix={arXiv}
+}
+
 @article{modernMethods,
   author    = {Dimas Mu{\~{n}}oz{-}Montesinos},
   title     = {Modern Methods for Text Generation},
