--- a/paper/egpaper_final.tex
+++ b/paper/egpaper_final.tex
@@ -102,7 +102,8 @@ With the introduction of \cite{attention}, new models for text generations task 
 \cite{attention} introduces an Encoder-Decoder based architecture for machine translation tasks.
 This architecture was ingeniously modified by \cite{bert} and \cite{gpt} to yield models such as BERT and GPT.
 Both Generative Pre-trained Transformer (GPT) and Bidirectional Encoder Representations from Transformers (BERT)
-are based on the idea of transformers and can be finetuned and adapted for a variety of tasks [***].
+are based on the idea of transformers and can be finetuned and
+adapted for a variety of tasks \cite{gptapps1} \cite{gptapps2} \cite{gptapps3} \cite{gptapps4} \cite{gptapps5}.
 These models have slowly replaced the RNN approaches.
 As \cite{modernMethods} states: "Transformers disrupted sequence-based deep learning significantly.
 The two variants of transformer models that we showed, BERT and GPT-2, outperform
